tests/baselines/reference/TwoInternalModulesThatMergeEachWithExportedLocalVarsOfTheSameName.errors.txt
part1.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
part1.ts(7,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
part2.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
part2.ts(3,24): error TS2304: Cannot find name 'Point'.
part2.ts(5,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
part2.ts(7,36): error TS2304: Cannot find name 'Point'.
part2.ts(7,54): error TS2304: Cannot find name 'Point'.


==== part1.ts (2 errors) ====
    export module A {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface Point {
            x: number;
            y: number;
        }
    
        export module Utils {
                      ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export function mirror<T extends Point>(p: T) {
                return { x: p.y, y: p.x };
            }
        }
    
        export var Origin: Point = { x: 0, y: 0 };
    }
    
==== part2.ts (5 errors) ====
    export module A {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        // collision with 'Origin' var in other part of merged module
        export var Origin: Point = { x: 0, y: 0 };
                           ~~~~~
!!! error TS2304: Cannot find name 'Point'.
    
        export module Utils {
                      ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export class Plane {
                constructor(public tl: Point, public br: Point) { }
                                       ~~~~~
!!! error TS2304: Cannot find name 'Point'.
                                                         ~~~~~
!!! error TS2304: Cannot find name 'Point'.
            }
        }
    }
    